2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (SHParseDisplayName): Fix definition.

2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.14.
	* Makefile.in: Ditto.

2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (SHParseDisplayName): Define.

	Thanks to James Roberts-Thomson for the report.

2009-20-10  Chris Sutcliffe  <ir0n3h4d@users.sourceforge.net>

	* include/wingdi.h (ENHMFENUMPROC): Correct definition.

	Thanks to Alexander Vassilev for the report.

2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/iprtrmib.h (MIB_IPADDRROW): Correct definition.

	Thanks to Thomas Denk for the report.

2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (UnmapViewOfFile): Correct definition.

	Thanks to Dimitry Sibiryakov for the report.

2009-20-10  Aleksey Chernov  <virxkane@users.sourceforge.net>

	* include/sspi.h: Include ntsecapi.h to correct postgresql build error.

2009-20-10  Heiko Hund  <heiko@ist.eigentlich.net>

	* include/commctrl.h (GetMUILanguage, InitMUILanguage): Add prototypes.
	* lib/comctl32.def (GetMUILanguage, InitMUILanguage): Define.

2009-20-10  Michael James  <james.me@gmail.com>

	* include/wingdi.h (CLEARTYPE_QUALITY): Define.
	* include/winuser.h (WM_KEYLAST): Alternative definition when _WIN32_WINNT
	>= 0x0501.
	(WM_UNICHAR,UNICODE_NOCHAR): Define.
	* lib/comctl32.def (DefSubclassProc@16,GetWindowSubclass@16,
	RemoveWindowSubclass@12): Add exports.
	* lib/gdi32.def (GetDCBrushColor@4,GetDCPenColor@4): Add exports.

2009-20-10  Jarkko Sakkinen  <jarkko.sakkinen@iki.fi>

	* include/winuser.h (WM_TOUCHMOVE, WM_TOUCHDOWN, WM_TOUCHUP,
	TOUCHEVENTF_DOWN, TOUCHEVENTF_INRANGE, TOUCHEVENTF_MOVE,
	TOUCHEVENTF_NOCOALESCE, TOUCHEVENTF_PALM, TOUCHEVENTF_PEN,
	TOUCHEVENTF_PRIMARY, TOUCHEVENTF_UP, TOUCHEVENTMASKF_CONTACTAREA,