@@ -8,7 +8,18 @@
 extern "C" {
 #endif
 
-#define ACO_AUTOSUGGEST 0x01
+typedef enum tagAUTOCOMPLETEOPTIONS {
+    ACO_NONE = 0x00,
+    ACO_AUTOSUGGEST = 0x01,
+    ACO_AUTOAPPEND = 0x02,
+    ACO_SEARCH = 0x04,
+    ACO_FILTERPREFIXES = 0x08,
+    ACO_USETAB = 0x10,
+    ACO_UPDOWNKEYDROPSLIST = 0x20,
+    ACO_RTLREADING = 0x40,
+    ACO_WORD_FILTER = 0x80,
+    ACO_NOPREFIXFILTERING = 0x100
+} AUTOCOMPLETEOPTIONS;
 
 #define INTERFACE IAutoComplete
 DECLARE_INTERFACE_(IAutoComplete, IUnknown)
