@@ -1,3 +1,7 @@
+2010-01-26  Chris Sutcliffe  <ir0n3h4d@users.sourceforge.net>
+
+	* include/shldisp.h (AUTOCOMPLETEOPTIONS): Add enum.
+
 2009-20-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
 	* include/shlobj.h (SHParseDisplayName): Fix definition.
